--- a/trading-advisory/src/main/resources/application.properties
+++ b/trading-advisory/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/trading_advisory
-spring.datasource.username=root
-spring.datasource.password=Nikhil@1234
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -9,14 +9,14 @@ server.port = 8080
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-app.jwtSecret= demosecretkey
+app.jwtSecret=
 app.jwtExpirationInMs = 3600000
 
 #Email properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sstradingadvisory@gmail.com
-spring.mail.password=June@2021
+spring.mail.username=
+spring.mail.password=
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
@@ -30,6 +30,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 stocknoteURI=https://api.stocknote.com
 serverUrl=http://localhost:8080/api/auth
-adminUser=DS45079
-indexName=NIFTY
-volumeThreshold=100000
+adminUser=
+indexName=
+volumeThreshold=
