--- a/trading-advisory/src/main/resources/application.properties
+++ b/trading-advisory/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 server.port = 8080
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 app.jwtSecret= demosecretkey
 app.jwtExpirationInMs = 3600000
@@ -30,6 +30,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 stocknoteURI=https://api.stocknote.com
 serverUrl=http://localhost:8080/api/auth
+placeOrderEndPoint=/order/placeOrder
 adminUser=DS45079
-indexName=NIFTY
+indexName=NIFTY 50
 volumeThreshold=100000
