--- a/trading-advisory/src/main/resources/application.properties
+++ b/trading-advisory/src/main/resources/application.properties
@@ -6,11 +6,13 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 server.port = 8080
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 app.jwtSecret= demosecretkey
 app.jwtExpirationInMs = 3600000
+
+technicalAnalysisActive = false
 
 #Email properties
 spring.mail.host=smtp.gmail.com
